clusters/cluster0/kubernetes/apps/network-policies/auth.yaml
# Namespace: auth
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "default-deny"
  namespace: "auth"
spec:
  endpointSelector: {}
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-egress-to-postgres"
  namespace: "auth"
spec:
  endpointSelector: {}
  egress:
  - toEndpoints:
    - matchLabels:
        "io.cnpg.namespace": "cnpg-system"
    toPorts:
    - ports:
      - port: "5432"
        protocol: TCP
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-prometheus-scraping"
  namespace: "auth"
spec:
  endpointSelector: {}
  ingress:
  - fromEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": "observability"
    toPorts:
    - ports:
      - port: "9100"
        protocol: TCP
      - port: "8080"
        protocol: TCP
