clusters/cluster0/kubernetes/apps/network-policies/biggs.yaml
# Namespace: biggs
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "default-deny"
  namespace: "biggs"
spec:
  endpointSelector: {}
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-egress-dns"
  namespace: "biggs"
spec:
  endpointSelector: {}
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": "kube-system"
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-egress-to-postgres"
  namespace: "biggs"
spec:
  endpointSelector: {}
  egress:
    - toEndpoints:
        - matchLabels:
            "io.cnpg.namespace": "cnpg-system"
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-ingress-from-gateway"
  namespace: "biggs"
spec:
  endpointSelector:
    matchLabels:
      app: biggs-app
  ingress:
    - fromEndpoints:
        - matchLabels:
            component: gateway
            "k8s:io.kubernetes.pod.namespace": "networking"
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-prometheus-scraping"
  namespace: "biggs"
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": "observability"
      toPorts:
        - ports:
            - port: "9100"
              protocol: TCP
            - port: "8080"
              protocol: TCP
