clusters/cluster0/kubernetes/apps/network-policies/manticore.yaml
# Namespace: manticore
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "default-deny"
  namespace: "manticore"
spec:
  endpointSelector: {}
---
# Allow egress to DNS
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-egress-dns"
  namespace: "manticore"
spec:
  endpointSelector: {}
  egress:
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": "kube-system"
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
---
# Allow ingress from gateway
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-ingress-from-gateway"
  namespace: "manticore"
spec:
  endpointSelector: {}
  ingress:
  - fromEndpoints:
    - matchLabels:
        component: gateway
        "k8s:io.kubernetes.pod.namespace": "networking"
---
# Allow observability scraping
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-prometheus-scraping"
  namespace: "manticore"
spec:
  endpointSelector: {}
  ingress:
  - fromEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": "observability"
    toPorts:
    - ports:
      - port: "9100"
        protocol: TCP
      - port: "8080"
        protocol: TCP
