clusters/cluster0/kubernetes/apps/network-policies/matrix.yaml
# Namespace: matrix
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "default-deny"
  namespace: "matrix"
spec:
  endpointSelector: {}
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-ingress-from-gateway"
  namespace: "matrix"
spec:
  endpointSelector: {}
  ingress:
  - fromEndpoints:
    - matchLabels:
        component: gateway
        "k8s:io.kubernetes.pod.namespace": "networking"
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-prometheus-scraping"
  namespace: "matrix"
spec:
  endpointSelector: {}
  ingress:
  - fromEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": "observability"
    toPorts:
    - ports:
      - port: "9100"
        protocol: TCP
      - port: "8080"
        protocol: TCP
