clusters/cluster0/kubernetes/apps/network-policies/media.yaml
# Namespace: media
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "default-deny"
  namespace: "media"
spec:
  endpointSelector: {}
---
# Allow egress to NFS within same namespace
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-egress-to-nfs"
  namespace: "media"
spec:
  endpointSelector: {}
  egress:
  - toEndpoints:
    - matchLabels:
        component: nfs-server
    toPorts:
    - ports:
      - port: "2049"
        protocol: TCP
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-prometheus-scraping"
  namespace: "media"
spec:
  endpointSelector: {}
  ingress:
  - fromEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": "observability"
    toPorts:
    - ports:
      - port: "9100"
        protocol: TCP
      - port: "8080"
        protocol: TCP
