clusters/cluster0/kubernetes/apps/network-policies/networking.yaml
# Namespace: networking
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "default-deny"
  namespace: "networking"
spec:
  endpointSelector: {}
---
# Allow egress to authorized application namespaces
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-egress-to-apps"
  namespace: "networking"
spec:
  endpointSelector: {}
  egress:
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": "affine"
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": "biggs"
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": "auth"
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": "games"
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": "jitsi"
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": "matrix"
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": "renovate"
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": "dreamcast"
---
# Allow egress to DNS
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-egress-dns"
  namespace: "networking"
spec:
  endpointSelector: {}
  egress:
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": "kube-system"
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
