clusters/cluster0/kubernetes/apps/network-policies/renovate.yaml
# Namespace: renovate
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "default-deny"
  namespace: "renovate"
spec:
  endpointSelector: {}
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-egress-dns"
  namespace: "renovate"
spec:
  endpointSelector: {}
  egress:
    - toEndpoints:
        - matchLabels:
            "io.kubernetes.pod.namespace": "kube-system"
            "k8s:k8s-app": "kube-dns"
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-egress-k8s-api"
  namespace: "renovate"
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - "kube-apiserver"
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-egress-to-postgres"
  namespace: "renovate"
spec:
  endpointSelector: {}
  egress:
    - toEndpoints:
        - matchLabels:
            "io.cnpg.namespace": "cnpg-system"
            "app.kubernetes.io/name": "cnpg-renovate-rw"
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-egress-github"
  namespace: "renovate"
spec:
  endpointSelector:
    matchLabels:
      "app.kubernetes.io/name": "renovate"
  egress:
    - toFQDNs:
        - "github.com"
        - "api.github.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-prometheus-scraping"
  namespace: "renovate"
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": "observability"
      toPorts:
        - ports:
            - port: "9100"
              protocol: TCP
            - port: "8080"
              protocol: TCP
